tests/ui/parallel-rustc/fn-sig-cycle-ice-154560.stderr
error[E0391]: cycle detected when resolving lifetimes for `IntFactory::stream`
  --> $DIR/fn-sig-cycle-ice-154560.rs:9:5
   |
LL |     fn stream(&self) -> impl IntFactory<stream(..): Send>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which requires computing function signature of `IntFactory::stream`...
   = note: ...which requires looking up late bound vars inside `IntFactory::stream`...
   = note: ...which again requires resolving lifetimes for `IntFactory::stream`, completing the cycle
note: cycle used when listing captured lifetimes for opaque `IntFactory::stream::{opaque#0}`
  --> $DIR/fn-sig-cycle-ice-154560.rs:9:25
   |
LL |     fn stream(&self) -> impl IntFactory<stream(..): Send>;
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: for more information, see <https://rustc-dev-guide.rust-lang.org/overview.html#queries> and <https://rustc-dev-guide.rust-lang.org/query.html>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
